--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     adipisicing elit. Deleniti molestiae architecto
                     autem cumque laborum nobis.</p>
             </div>
-            <div class="image"><img src="/img/shoes.png"></div>
+            <div class="image"><img src="./img/shoes.png"></div>
         </div>
 
     </div>
